@@ -68,7 +68,7 @@ public abstract class SecurityTokenManager {
                 return null;
             }
             try {
-                instance = (SecurityTokenManager) Class.forName(managerName).newInstance();
+                instance = (SecurityTokenManager) Class.forName(managerName).getDeclaredConstructor().newInstance();
             } catch (Exception e) {
                 MiscUtils.getLogger().error("Unable to load token manager");
             }
